# M365-langchain-agent

./: .env.example  .gitignore  Dockerfile  README.md  app.py  deploy-aks.sh  deploy-container-apps.sh  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md
k8s/: deployment.yaml
m365_langchain_agent/: __init__.py  agent.py  app.py  auth.py  auth_with_keyvault.py  bot.py  chainlit_app.py  chainlit_data_layer.py  content_safety.py  cosmos_store.py  foundry_register.py  key_vault.py  main.py  metrics_store.py  secrets_manager.py
m365_langchain_agent/utils/: search.py
public/: custom.css  debug-accordion.js
scripts/: register_foundry_agent.py
src/m365_langchain_agent/: __init__.py  __main__.py  config.py  cosmos.py  exceptions.py  foundry.py  key_vault.py  log_config.py  models.py
src/m365_langchain_agent/bot/: __init__.py  adapter.py  handler.py
src/m365_langchain_agent/core/: __init__.py  agent.py  prompts.py  search.py  sttm.py
src/m365_langchain_agent/prompts/: out_of_scope.txt  query_refine.txt  query_rewrite.txt  sttm_system.txt  suggested_prompts.txt  system.txt
src/m365_langchain_agent/web/: __init__.py  app.py  auth.py  chainlit_app.py  data_layer.py  middleware.py  routes.py
tests/: conftest.py  test_smoke.py
tests/core/: test_agent.py  test_sttm.py
