[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "m365-langchain-agent"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.14",
    "langchain-openai>=0.2.14",
    "langchain-core>=0.3.29",
    "azure-search-documents>=11.6.0b7",
    "azure-identity>=1.19.0",
    "azure-cosmos>=4.7.0",
    "botbuilder-core>=4.16.0",
    "botbuilder-integration-aiohttp>=4.16.0",
    "langsmith>=0.1.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.10.5",
    "python-dotenv>=1.0.1",
    "chainlit>=1.3.0",
    "requests>=2.31.0",
]

[tool.setuptools.packages.find]
include = ["m365_langchain_agent*"]
